# ranking-app

./: .env.example  .env.test  .gitignore  README.md  docker-compose.test.yaml  docker-compose.yaml
compare/: pyproject.toml  pyrightconfig.json
compare/src/compare/: __main__.py  app.py  audio_player.py  matchio.py  matchmaking.py  render.py  song.py
compare/tests/: test_app.py  test_audio_player.py  test_matchio.py  test_matchmaking.py  test_render.py  test_song.py
database/: Dockerfile  create_tables.sql
viz/api/: Dockerfile  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
viz/api/src/: app.ts  database.ts  server.ts  tools.ts
viz/api/src/routes/: delete.ts  health.ts  index.ts
viz/api/src/routes/match/: index.ts  queries.ts  router.ts  schema.ts
viz/api/src/routes/song/: index.ts  queries.ts  router.ts  schema.ts
viz/api/src/routes/songstats/: index.ts  queries.ts  router.ts
viz/api/src/test/: api.test.ts  health.test.ts  jest.setup.ts
viz/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
viz/frontend/src/: data.ts  index.tsx  types.ts
viz/frontend/src/__tests__/: LeaderboardRow.test.tsx  ScrubberBar.test.tsx  data.test.ts
viz/frontend/src/components/App/: App.tsx
viz/frontend/src/components/Leaderboard/: Leaderboard.module.css  Leaderboard.tsx
viz/frontend/src/components/LeaderboardRow/: LeaderboardRow.module.css  LeaderboardRow.tsx  index.ts
viz/frontend/src/styles/: globals.css
(+4 files in other folders)
